# dnst

./: Cargo.toml  Changelog.md  Dockerfile  README.md
.github/workflows/: ci.yml  pkg.yml
doc/manual/source/: building.rst  index.rst  installation.rst
doc/manual/source/man/: dnst-keyset.rst
pkg/debian/: postinst  prerm
pkg/dnst-ldnsutils/: Cargo.toml
pkg/dnst-ldnsutils/pkg/debian/: postinst  prerm
pkg/dnst-ldnsutils/pkg/rpm/: scriptlets.toml
pkg/dnst-ldnsutils/pkg/rules/: packages-to-build.yml  packages-to-test.yml
pkg/dnst-ldnsutils/pkg/test-scripts/: test-dnst-ldnsutils.sh
pkg/rpm/: scriptlets.toml
pkg/rules/: packages-to-build.yml  packages-to-test.yml
pkg/test-scripts/: test-dnst.sh
src/: log.rs  util.rs
src/commands/: keygen.rs  signzone.rs
src/commands/keyset/: cmd.rs  kmip.rs  mod.rs  tsig.rs
tests/: signzone.rs
